force-app/main/default/objects/Webcasts_Attendee_Data__c/Webcasts_Attendee_Data__c.object-meta.xml
<CustomObject>
    <label>Webcasts Attendee Data</label>
    <nameField>
        <label>Webcasts Attendee Data Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Webcasts Attendee Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>