force-app/main/default/objects/Webcasts_Attendee_Data__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Webcasts Attendee Data</relationshipLabel>
    <relationshipName>Webcasts_Attendee_Data</relationshipName>
    <type>Lookup</type>
</CustomField>