force-app/main/default/objects/Webcasts_Attendee_Data__c/fields/Live_Session_Duration__c.field-meta.xml
<CustomField>
    <fullName>Live_Session_Duration__c</fullName>
    <label>Live Session Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>