force-app/main/default/objects/Webcasts_Attendee_Data__c/fields/SIM_Live_Duration__c.field-meta.xml
<CustomField>
    <fullName>SIM_Live_Duration__c</fullName>
    <label>SIM Live Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>