force-app/main/default/objects/Webcasts_Attendee_Data__c/fields/Webcast_Campaign_Source__c.field-meta.xml
<CustomField>
    <fullName>Webcast_Campaign_Source__c</fullName>
    <label>Webcast Campaign Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>